syntax = "proto3";

// option 指令生成一个指定的文件夹，然后把pb.go保存进去
// 通过go_package指定pb文件生成的位置
option go_package ="../proto";

message LoginReq{
  string userName   = 1;
  string passWord   = 2;
}

message LoginResp{
  int32 loginResult   = 1;  // 1成功，2失败
}

message RegisterReq{
  string userName   = 1;
  string passWord   = 2;
}

message RegisterResp{
  int32 RegisterResult   = 1;  // 1成功，2失败
}